added first implementation of groupmonitor

--- a/src/main/resources/de/konnekting/suite/Bundle.properties
+++ b/src/main/resources/de/konnekting/suite/Bundle.properties
@@ -12,3 +12,4 @@ MainWindow.Title=KONNEKTING Suite
 Main.exitMenuItem.text=Beenden
 Main.settingsMenuItem.text=Einstellungen
 SettingsFrame.Title=Einstellungen
+Main.groupMonitorItem.text=Gruppenmonitor
