removed menubar, added groupmonitor to toolbar added settings and exit icon to toolbar added settings saver for groupmonitor

--- a/src/main/resources/de/konnekting/suite/Bundle.properties
+++ b/src/main/resources/de/konnekting/suite/Bundle.properties
@@ -6,10 +6,12 @@ Main.addDeviceButton.toolTipText=Ger\u00e4t hinzuf\u00fcgen
 Main.openProjectButton.toolTipText=Projektordner w\u00e4hlen
 Main.programmDataOnlyButton.toolTipText=Programmieren nur Daten
 Main.programmAllButton.toolTipText=Programmieren inkl. Adresse
-Main.jMenu1.text=Datei
 Main.removeDeviceButton.toolTipText=Ger\u00e4t entfernen
 MainWindow.Title=KONNEKTING Suite
-Main.exitMenuItem.text=Beenden
-Main.settingsMenuItem.text=Einstellungen
 SettingsFrame.Title=Einstellungen
-Main.groupMonitorItem.text=Gruppenmonitor
+Main.groupmonitorButton.text=
+Main.groupmonitorButton.toolTipText=Gruppenmonitor
+Main.settingsButton.toolTipText=Einstellungen
+Main.settingsButton.text=
+Main.exitButton.text=
+Main.exitButton.toolTipText=Suite beenden
