--- a/pom.xml
+++ b/pom.xml
@@ -39,12 +39,6 @@
             <groupId>de.konnekting</groupId>
             <artifactId>konnekting-device-config</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.github.calimero</groupId>
-                    <artifactId>calimero-rxtx</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         
         <dependency>
@@ -73,6 +67,22 @@
             <groupId>de.root1</groupId>
             <artifactId>rxtx-rebundled</artifactId>
             <version>2.1-7r2-6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.calimero</groupId>
+            <artifactId>calimero-rxtx</artifactId>
+            <version>2.3-beta</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.rxtx</groupId>
+                    <artifactId>rxtx</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.github.calimero</groupId>
+            <artifactId>calimero-core</artifactId>
+            <version>2.3-beta</version>
         </dependency>
     </dependencies>
     
