--- a/pom.xml
+++ b/pom.xml
@@ -38,24 +38,19 @@
         <dependency>
             <groupId>de.konnekting</groupId>
             <artifactId>konnekting-device-config</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         
         <dependency>
             <groupId>de.konnekting</groupId>
             <artifactId>konnekting-xml-schema</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         
         <dependency>
             <groupId>org.jdesktop</groupId>
             <artifactId>beansbinding</artifactId>
             <version>1.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>uk.com.robust-it</groupId>
-            <artifactId>cloning</artifactId>
-            <version>1.9.2</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
