--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>konnekting-suite</artifactId>
     <version>1.0.0-BETA3-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>KONNEKTING Suite</name>
+    <name>KONNEKTING Suite ${project.version}</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
