* added two new prog buttons: KO only, Param only

--- a/src/main/resources/de/konnekting/suite/Bundle.properties
+++ b/src/main/resources/de/konnekting/suite/Bundle.properties
@@ -4,8 +4,8 @@
 
 Main.addDeviceButton.toolTipText=Ger\u00e4t hinzuf\u00fcgen
 Main.openProjectButton.toolTipText=Projektordner w\u00e4hlen
-Main.programmDataOnlyButton.toolTipText=Programmieren nur Daten
-Main.programmAllButton.toolTipText=Programmieren inkl. Adresse
+Main.programmDataOnlyButton.toolTipText=Programmieren nur KO und Parameter
+Main.programmAllButton.toolTipText=Alles Programmieren
 Main.removeDeviceButton.toolTipText=Ger\u00e4t entfernen
 MainWindow.Title=KONNEKTING Suite
 SettingsFrame.Title=Einstellungen
@@ -15,3 +15,7 @@ Main.settingsButton.toolTipText=Einstellungen
 Main.settingsButton.text=
 Main.exitButton.text=
 Main.exitButton.toolTipText=Suite beenden
+Main.programComObjOnly.text=
+Main.programParamOnly.text=
+Main.programComObjOnly.toolTipText=Programmieren nur KO
+Main.programParamOnly.toolTipText=Programmieren nur Parameter
