* added two new prog buttons: KO only, Param only

--- a/src/main/resources/de/konnekting/suite/Bundle.properties
+++ b/src/main/resources/de/konnekting/suite/Bundle.properties
@@ -15,7 +15,7 @@ Main.settingsButton.toolTipText=Einstellungen
 Main.settingsButton.text=
 Main.exitButton.text=
 Main.exitButton.toolTipText=Suite beenden
-Main.programComObjOnly.text=
-Main.programParamOnly.text=
-Main.programComObjOnly.toolTipText=Programmieren nur KO
-Main.programParamOnly.toolTipText=Programmieren nur Parameter
+Main.programParamOnlyButton.toolTipText=Programmieren nur Parameter
+Main.programParamOnlyButton.text=
+Main.programComObjOnlyButton.toolTipText=Programmieren nur KO
+Main.programComObjOnlyButton.text=
