updated splash, added about dialog

--- a/src/main/resources/de/konnekting/suite/Bundle.properties
+++ b/src/main/resources/de/konnekting/suite/Bundle.properties
@@ -19,3 +19,5 @@ Main.programParamOnlyButton.toolTipText=Programmieren nur Parameter
 Main.programParamOnlyButton.text=
 Main.programComObjOnlyButton.toolTipText=Programmieren nur KO
 Main.programComObjOnlyButton.text=
+Main.aboutButton.toolTipText=\u00dcber
+Main.aboutButton.text=
