--- a/src/main/resources/de/konnekting/suite/Bundle.properties
+++ b/src/main/resources/de/konnekting/suite/Bundle.properties
@@ -9,15 +9,55 @@ Main.programmAllButton.toolTipText=Alles Programmieren
 Main.removeDeviceButton.toolTipText=Ger\u00e4t entfernen
 MainWindow.Title=KONNEKTING Suite
 SettingsFrame.Title=Einstellungen
-Main.groupmonitorButton.text=
 Main.groupmonitorButton.toolTipText=Gruppenmonitor
-Main.settingsButton.toolTipText=Einstellungen
-Main.settingsButton.text=
-Main.exitButton.text=
+Main.settingsButton.toolTipText=Einstellungen \u00f6ffnen
 Main.exitButton.toolTipText=Suite beenden
 Main.programParamOnlyButton.toolTipText=Programmieren nur Parameter
-Main.programParamOnlyButton.text=
 Main.programComObjOnlyButton.toolTipText=Programmieren nur KO
-Main.programComObjOnlyButton.text=
 Main.aboutButton.toolTipText=\u00dcber
-Main.aboutButton.text=
+SaveDeviceAsDialog.cancelButton.text=Abbrechen
+SaveDeviceAsDialog.addDeviceButton.text=Ger\u00e4t anlegen
+SaveDeviceAsDialog.newDeviceNamePanel.border.title=Neues Ger\u00e4t
+SaveDeviceAsDialog.descriptionLabel.text=Beschreibung
+SaveDeviceAsDialog.noteLabel.text=<html><b>Hinweis:</b> Die angegebene Beschreibung wird dazu genutzt einen initiellen, eindeutigen Dateinamen im Projektverzeichnis zu generieren. Wird die Beschreibung im sp\u00e4teren Verlauf ge\u00e4ndert, wird die Datei nicht automatisch umbenannt.</html>
+DeviceEditor.commObjectTab.TabConstraints.tabTitle=Kommunikationsobjekte
+DeviceEditor.jLabel7.text=Physikalische Adresse
+DeviceEditor.jLabel6.text=Beschreibung
+DeviceEditor.propertiesPanel.border.title=Eigenschaften
+DeviceEditor.deviceTab.TabConstraints.tabTitle=Ger\u00e4t
+DeviceEditor.parameterTab.TabConstraints.tabTitle=Parameter
+DeviceInformationPanel.jLabel2.text=Ger\u00e4te-ID
+DeviceInformationPanel.jLabel1.text=Hersteller-ID
+DeviceInformationPanel.deviceInfoPanel.border.title=Ger\u00e4tedaten
+DeviceInformationPanel.jLabel5.text=Ger\u00e4t
+DeviceInformationPanel.jLabel4.text=Hersteller
+DeviceInformationPanel.jLabel3.text=Ger\u00e4te-Rev.
+DeviceList.deviceListCellRenderer.text=deviceListCellRenderer1
+ParameterList.jLabel1.text=Anzahl Parameter:
+ParameterListItem.descriptionLabel.text=jLabel1
+ParameterPanel.deviceDescriptionLabel.text=Ger\u00e4t: 1.1.30  PM Technik
+ProgramDialog.statusMessageLabel.text=StatusText
+ProgramDialog.deviceNameLabel.text=Ger\u00e4t
+ProgramDialog.jLabel2.text=Ger\u00e4t wird programmiert:
+ProgramDialog.cancelButton.text=Abbrechen
+SettingsDialog.ipInterfaceRadioButton.text=IP Interface
+SettingsDialog.ipRouterRadioButton.text=IP Router
+SettingsDialog.ipRouterMulticasttextField.text=224.0.23.12
+SettingsDialog.jLabel1.text=Multicast IP
+SettingsDialog.saveButton.text=\u00dcbernehmen
+SettingsDialog.knxPanel.TabConstraints.tabTitle=KNX
+SettingsDialog.jLabel5.text=!!!\u00c4NDERUNGEN WERDEN ERST MIT EINEM NEUSTART DER SUITE WIRKSAM!!!
+SettingsDialog.askFolderCheckbox.text=Beim Start nach Projektordner fragen?
+SettingsDialog.individualAddressTextField.text=1.0.255
+SettingsDialog.lastFolderCheckbox.text=Letzten Projektordner automatisch \u00f6ffnen?
+SettingsDialog.jLabel4.text=Physikalische Adresse KNX
+SettingsDialog.generalPanel.TabConstraints.tabTitle=Allgemein
+SettingsDialog.tpuartDevicetextField.text=COM3
+SettingsDialog.jLabel2.text=Schnittstelle
+SettingsDialog.tpuartRadioButton.text=TPUART via RS232
+SettingsDialog.ipInterfaceIpTextField.text=192.168.0.100
+SettingsDialog.jLabel3.text=IP-Addresse
+SettingsDialog.settingsTabbedPane.toolTipText=
+SplashPanel.jLabel1.text=Loading...
+SplashPanel.jLabel2.text=jLabel2
+StatusPanel.lastStatusMsgLabel.text=Status
