worked on issue #9

--- a/src/main/resources/de/konnekting/suite/Bundle.properties
+++ b/src/main/resources/de/konnekting/suite/Bundle.properties
@@ -19,45 +19,60 @@ SaveDeviceAsDialog.cancelButton.text=Abbrechen
 SaveDeviceAsDialog.addDeviceButton.text=Ger\u00e4t anlegen
 SaveDeviceAsDialog.newDeviceNamePanel.border.title=Neues Ger\u00e4t
 SaveDeviceAsDialog.descriptionLabel.text=Beschreibung
-SaveDeviceAsDialog.noteLabel.text=<html><b>Hinweis:</b> Die angegebene Beschreibung wird dazu genutzt einen initiellen, eindeutigen Dateinamen im Projektverzeichnis zu generieren. Wird die Beschreibung im sp\u00e4teren Verlauf ge\u00e4ndert, wird die Datei nicht automatisch umbenannt.</html>
 DeviceEditor.commObjectTab.TabConstraints.tabTitle=Kommunikationsobjekte
-DeviceEditor.jLabel7.text=Physikalische Adresse
-DeviceEditor.jLabel6.text=Beschreibung
 DeviceEditor.propertiesPanel.border.title=Eigenschaften
 DeviceEditor.deviceTab.TabConstraints.tabTitle=Ger\u00e4t
 DeviceEditor.parameterTab.TabConstraints.tabTitle=Parameter
-DeviceInformationPanel.jLabel2.text=Ger\u00e4te-ID
-DeviceInformationPanel.jLabel1.text=Hersteller-ID
 DeviceInformationPanel.deviceInfoPanel.border.title=Ger\u00e4tedaten
-DeviceInformationPanel.jLabel5.text=Ger\u00e4t
-DeviceInformationPanel.jLabel4.text=Hersteller
-DeviceInformationPanel.jLabel3.text=Ger\u00e4te-Rev.
-DeviceList.deviceListCellRenderer.text=deviceListCellRenderer1
-ParameterList.jLabel1.text=Anzahl Parameter:
-ParameterListItem.descriptionLabel.text=jLabel1
-ParameterPanel.deviceDescriptionLabel.text=Ger\u00e4t: 1.1.30  PM Technik
-ProgramDialog.statusMessageLabel.text=StatusText
+ParameterPanel.deviceDescriptionLabel.text=Ger\u00e4t: 
 ProgramDialog.deviceNameLabel.text=Ger\u00e4t
-ProgramDialog.jLabel2.text=Ger\u00e4t wird programmiert:
 ProgramDialog.cancelButton.text=Abbrechen
-SettingsDialog.ipInterfaceRadioButton.text=IP Interface
+SettingsDialog.ipInterfaceRadioButton.text=IP Schnittstelle
 SettingsDialog.ipRouterRadioButton.text=IP Router
 SettingsDialog.ipRouterMulticasttextField.text=224.0.23.12
-SettingsDialog.jLabel1.text=Multicast IP
 SettingsDialog.saveButton.text=\u00dcbernehmen
 SettingsDialog.knxPanel.TabConstraints.tabTitle=KNX
-SettingsDialog.jLabel5.text=!!!\u00c4NDERUNGEN WERDEN ERST MIT EINEM NEUSTART DER SUITE WIRKSAM!!!
 SettingsDialog.askFolderCheckbox.text=Beim Start nach Projektordner fragen?
 SettingsDialog.individualAddressTextField.text=1.0.255
 SettingsDialog.lastFolderCheckbox.text=Letzten Projektordner automatisch \u00f6ffnen?
-SettingsDialog.jLabel4.text=Physikalische Adresse KNX
 SettingsDialog.generalPanel.TabConstraints.tabTitle=Allgemein
 SettingsDialog.tpuartDevicetextField.text=COM3
-SettingsDialog.jLabel2.text=Schnittstelle
 SettingsDialog.tpuartRadioButton.text=TPUART via RS232
 SettingsDialog.ipInterfaceIpTextField.text=192.168.0.100
-SettingsDialog.jLabel3.text=IP-Addresse
-SettingsDialog.settingsTabbedPane.toolTipText=
-SplashPanel.jLabel1.text=Loading...
-SplashPanel.jLabel2.text=jLabel2
-StatusPanel.lastStatusMsgLabel.text=Status
+SettingsDialog.settingsTabbedPane.toolTipText=Einstellungen
+DeviceEditor.descriptionLabel.text=Beschreibung
+DeviceEditor.individualAddressLabel.text=Physikalische Adresse
+DeviceInformationPanel.manufacturerIdLabel.text=Hersteller-ID
+DeviceInformationPanel.deviceIdLabel.text=Ger\u00e4te-ID
+DeviceInformationPanel.deviceRevisionLabel.text=Ger\u00e4te-Rev.
+DeviceInformationPanel.manufacturerNameLabel.text=Hersteller
+DeviceInformationPanel.deviceNameLabel.text=Ger\u00e4t
+ParameterList.numberOfParamsLabel.text=Anzahl Parameter:
+ProgramDialog.deviceGettingProgrammedLabel.text=Ger\u00e4t wird programmiert:
+SettingsDialog.individualAddressLabel.text=Physikalische Adresse KNX
+SettingsDialog.changesApplyOnRestartLabel.text=!!!\u00c4NDERUNGEN WERDEN ERST MIT EINEM NEUSTART DER SUITE WIRKSAM!!!
+SettingsDialog.ipAddressLabel.text=IP-Addresse
+SettingsDialog.tpuartinterfaceLabel.text=Schnittstelle
+SettingsDialog.multicastipLabel.text=Multicast IP
+SplashPanel.statusLabel.text=Lade ...
+AboutDialog.versionLabel.text=Lade ...
+AboutDialog.websiteButton.text=KONNEKTING Internetseite
+CommObjectTableModel.tableheader.id=ID
+CommObjectTableModel.tableheader.name=Name
+CommObjectTableModel.tableheader.function=Funktion
+CommObjectTableModel.tableheader.dpt=DPT
+CommObjectTableModel.tableheader.description=Beschreibung
+CommObjectTableModel.tableheader.groupaddress=Gruppenadresse
+IndividualAddressInputPanel.parkButton.text=parken
+GroupMonitorFrame.autoscrollButton.text=Automatisch scrollen
+GroupMonitorFrame.clearButton.text=L\u00f6schen
+GroupMonitorFrame.stopButton.text=Stop
+GroupMonitorFrame.startButton.text=Start
+GroupMonitorFrame.title=Gruppenmonitor
+GroupMonitorFrame.telegramCount.text=Telegramme:
+GroupMonitorTableModel.tableheader.number=Nr.
+GroupMonitorTableModel.tableheader.time=Zeit
+GroupMonitorTableModel.tableheader.sender=Absender
+GroupMonitorTableModel.tableheader.telegram=Telegramm
+GroupMonitorTableModel.tableheader.groupaddress=Gruppenadresse
+GroupMonitorTableModel.tableheader.data=Daten
