worked on issue #9

--- a/src/main/resources/de/konnekting/suite/Bundle.properties
+++ b/src/main/resources/de/konnekting/suite/Bundle.properties
@@ -72,3 +72,5 @@ GroupMonitorTableModel.tableheader.sender=Absender
 GroupMonitorTableModel.tableheader.telegram=Telegramm
 GroupMonitorTableModel.tableheader.groupaddress=Gruppenadresse
 GroupMonitorTableModel.tableheader.data=Daten
+MainWindow.ConsoleMsg.KnxConnection=KNX Verbindung
+MainWindow.ConsoleMsg.operatingsystem=Betriebssystem
