worked on issue #9

--- a/src/main/resources/de/konnekting/suite/Bundle.properties
+++ b/src/main/resources/de/konnekting/suite/Bundle.properties
@@ -72,5 +72,6 @@ GroupMonitorTableModel.tableheader.sender=Absender
 GroupMonitorTableModel.tableheader.telegram=Telegramm
 GroupMonitorTableModel.tableheader.groupaddress=Gruppenadresse
 GroupMonitorTableModel.tableheader.data=Daten
-MainWindow.ConsoleMsg.KnxConnection=KNX Verbindung
-MainWindow.ConsoleMsg.operatingsystem=Betriebssystem
+MainWindow.ConsoleMsg.knxConnection=KNX Verbindung: 
+MainWindow.ConsoleMsg.operatingSystem=Betriebssystem
+MainWindow.ConsoleMsg.detectedTelegram=KNX Telegramm entdeckt. Verbindung scheint in Ordnung zu sein.
