--- a/src/main/resources/de/konnekting/suite/Bundle.properties
+++ b/src/main/resources/de/konnekting/suite/Bundle.properties
@@ -21,7 +21,6 @@ DeviceEditor.deviceTab.TabConstraints.tabTitle=Ger\u00e4t
 DeviceEditor.parameterTab.TabConstraints.tabTitle=Parameter
 DeviceInformationPanel.deviceInfoPanel.border.title=Ger\u00e4tedaten
 ParameterPanel.deviceDescriptionLabel.text=Ger\u00e4t: 
-ProgramDialog.deviceNameLabel.text=Ger\u00e4t
 ProgramDialog.cancelButton.text=Abbrechen
 SettingsDialog.ipInterfaceRadioButton.text=IP Schnittstelle
 SettingsDialog.ipRouterRadioButton.text=IP Router
@@ -40,10 +39,9 @@ DeviceInformationPanel.deviceRevisionLabel.text=Ger\u00e4te-Rev.
 DeviceInformationPanel.manufacturerNameLabel.text=Hersteller
 DeviceInformationPanel.deviceNameLabel.text=Ger\u00e4t
 ParameterList.numberOfParamsLabel.text=Anzahl Parameter:
-ProgramDialog.deviceGettingProgrammedLabel.text=Ger\u00e4t wird programmiert:
 SettingsDialog.individualAddressLabel.text=Physikalische Adresse KNX
 SettingsDialog.changesApplyOnRestartLabel.text=!!!\u00c4NDERUNGEN WERDEN ERST MIT EINEM NEUSTART DER SUITE WIRKSAM!!!
-SettingsDialog.ipAddressLabel.text=IP-Addresse
+SettingsDialog.ipAddressLabel.text=IP Addresse
 SettingsDialog.tpuartinterfaceLabel.text=Schnittstelle
 SettingsDialog.multicastipLabel.text=Multicast IP
 SplashPanel.statusLabel.text=Lade ...
@@ -71,3 +69,9 @@ GroupMonitorTableModel.tableheader.data=Daten
 MainWindow.ConsoleMsg.knxConnection=KNX Verbindung: 
 MainWindow.ConsoleMsg.operatingSystem=Betriebssystem
 MainWindow.ConsoleMsg.detectedTelegram=KNX Telegramm entdeckt. Verbindung scheint in Ordnung zu sein.
+ProgramDialog.programmingLabel.text=Programmiere:
+ProgramDialog.ConsoleMsg.prefix=[Programmiere]
+ProgramDialog.ConsoleMsg.doneResult=Fertig! Dauer: %d ms
+ProgramDialog.ConsoleMsg.progress=Fortschritt:
+ProgramDialog.ConsoleMsg.errorOccured=Ein Fehler ist aufgetreten.
+ProgramDialog.ConsoleMsg.cancelRequested=Abbruch angefordert.
