--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.konnekting</groupId>
     <artifactId>konnekting-suite</artifactId>
-    <version>1.0.0-BETA4-SNAPSHOT</version>
+    <version>1.0.0-BETA4</version>
     <packaging>jar</packaging>
     <name>KONNEKTING Suite ${project.version}</name>
     <properties>
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>com.github.calimero</groupId>
             <artifactId>calimero-core</artifactId>
-            <version>2.3-beta</version>
+            <version>2.3-beta-AC0</version>
         </dependency>
     </dependencies>
     
@@ -90,9 +90,6 @@
         </resources>    
             
         <plugins>
-            <!--            <plugin>
-                <groupId>
-            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
