--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.konnekting</groupId>
     <artifactId>konnekting-suite</artifactId>
-    <version>1.0.0-BETA4</version>
+    <version>1.0.0-BETA5-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>KONNEKTING Suite ${project.version}</name>
     <properties>
