--- a/pom.xml
+++ b/pom.xml
@@ -66,9 +66,10 @@
         <dependency>
             <groupId>com.github.calimero</groupId>
             <artifactId>calimero-rxtx</artifactId>
-            <version>2.3-beta</version>
+            <version>2.3</version>
             <exclusions>
                 <exclusion>
+                    <!-- This is handled by de.root1:rxtx-rebundled -->
                     <groupId>org.rxtx</groupId>
                     <artifactId>rxtx</artifactId>
                 </exclusion>
@@ -77,8 +78,32 @@
         <dependency>
             <groupId>com.github.calimero</groupId>
             <artifactId>calimero-core</artifactId>
-            <version>2.3-beta-AC0</version>
+            <version>2.3-AC0</version>
         </dependency>
+        <dependency>
+            <groupId>com.weblookandfeel</groupId>
+            <artifactId>weblaf-parent</artifactId>
+            <version>1.2.8</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>com.weblookandfeel</groupId>
+            <artifactId>weblaf-ui</artifactId>
+            <version>1.2.8</version>
+        </dependency>
+        <dependency>
+            <groupId>com.weblookandfeel</groupId>
+            <artifactId>weblaf-core</artifactId>
+            <version>1.2.8</version>
+        </dependency>
+        
+        <!-- Darcula LAF -->
+        <dependency>
+            <groupId>com.bulenkov</groupId>
+            <artifactId>darcula</artifactId>
+            <version>1.0.0</version>
+        </dependency>        
+        
     </dependencies>
     
     <build>
@@ -118,6 +143,22 @@
             </plugin>
         </plugins>
     </build>
+    
+    <repositories>
+        <repository>
+            <id>lib</id>
+            <name>lib</name>
+            <releases>
+                <enabled>true</enabled>
+                <checksumPolicy>ignore</checksumPolicy>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <url>file:///${project.basedir}/lib</url>
+        </repository>
+    </repositories>
+    
     <!-- upload informations for deploying the jar -->
     <distributionManagement>
         <repository>
