--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
     <version>1.0.0-BETA5-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>KONNEKTING Suite ${project.version}</name>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.build.timestamp.format>yyyy-MM-dd_HH-mm-ss</maven.build.timestamp.format>
-        <timestamp>${maven.build.timestamp}</timestamp>
-    </properties>
+    
+    <parent>
+        <groupId>de.konnekting</groupId>
+        <artifactId>parent</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+    
     <dependencies>
         
         <!-- basic dependencies -->        
@@ -61,7 +61,7 @@
         <dependency>
             <groupId>de.root1</groupId>
             <artifactId>knxproj-parser</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.4</version>
         </dependency>
     </dependencies>
     
@@ -126,5 +126,9 @@
             <name>internal snapshots</name>
             <url>http://maven.root1.de/repository/snapshots/</url>
         </snapshotRepository>      
-    </distributionManagement>  
+    </distributionManagement>
+    <properties>
+        <maven.compiler.source>10</maven.compiler.source>
+        <maven.compiler.target>10</maven.compiler.target>
+    </properties>
 </project>
