--- a/pom.xml
+++ b/pom.xml
@@ -103,32 +103,28 @@
         </plugins>
     </build>
     
-    <repositories>
+    <repositories>      
         <repository>
             <id>root1-releases</id>
+            <name>root1.de Releases Repository</name>
+            <layout>default</layout>
             <url>http://maven.root1.de/repository/releases/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
         <repository>
             <id>root1-snapshots</id>
+            <name>root1.de Snapshots Repository</name>
+            <layout>default</layout>
             <url>http://maven.root1.de/repository/snapshots/</url>
-        </repository>
-    </repositories>
-    
-    <!-- upload informations for deploying the jar -->
-    <distributionManagement>
-        <repository>
-            <id>root1-releases</id>
-            <name>internal releases</name>
-            <url>http://maven.root1.de/repository/releases/</url>
-        </repository>
-        <snapshotRepository>
-            <id>root1-snapshots</id>
-            <name>internal snapshots</name>
-            <url>http://maven.root1.de/repository/snapshots/</url>
-        </snapshotRepository>      
-    </distributionManagement>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>    
+    </repositories>  
     <properties>
-        <maven.compiler.source>10</maven.compiler.source>
-        <maven.compiler.target>10</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 </project>
