--- a/pom.xml
+++ b/pom.xml
@@ -100,31 +100,16 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.source}</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-    
-    <repositories>      
-        <repository>
-            <id>root1-releases</id>
-            <name>root1.de Releases Repository</name>
-            <layout>default</layout>
-            <url>http://maven.root1.de/repository/releases/</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>root1-snapshots</id>
-            <name>root1.de Snapshots Repository</name>
-            <layout>default</layout>
-            <url>http://maven.root1.de/repository/snapshots/</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>    
-    </repositories>  
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-    </properties>
+
 </project>
